<resources>
    <string name="app_name">Calc</string>
    <string name="one">Button</string>
    <string name="division">/</string>
    <string name="button">Button</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="equalto">=</string>
    <string name="ac">AC</string>
    <string name="name">Name</string>
    <string name="floatte">%</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_2">2</string>
    <string name="pluss">+</string>
    <string name="_1">1</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="minus">−</string>
    <string name="multiply">×</string>
    <string name="todo">TODO</string>
    <string name="dot">.</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="display">display</string>
    <string name="Paranthseses">( )</string>
</resources>